[metadata]
name = BalloonDetector
version = 0.1
author = Ito Yuma
author_email = yumai6205@gmail.com
description = A package to detect balloons in pages of Japanese manga.
url = https://github.com/parkbearpark/BalloonDetector.git

[options]
packages = find:
install_requires =
    numpy
    opencv-python
    tensorflow-macos
    pillow
    matplotlib
include_package_data = True

[options.packages.find]
where = .
